<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rob499_rover_status_ui_interfaces</name>
  <version>0.1.0</version>
  <description>Messages for the ROS2 rover project.</description>
  <maintainer email="wyattboer@gmail.com">Wyatt Boer</maintainer>
  <license>BSD-3 Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
